app/assets/stylesheets/components/region_tile.scss
/*==========  Mobile First Method  ==========*/

/* Custom, iPhone Retina */
@media only screen and (min-device-width: 320px) and (min-width : 320px) {
  article.region-tile {
    text-align: center;
    line-height: 1.2em;
    width: 100%;
    background-image: url("/assets/cta.png");
    background-size: cover;
    background-position: center center;
    display: flex;
    align-content: stretch;
    align-items: stretch;
    transition: filter 0.3s ease;

    &:hover {
      filter: brightness(1.3);
    }

    div {
      width: 100%;
      height: 100%;
      min-height: 75px;
      transition: all 0.4s ease;
      position: relative;

      h3 {
        position: absolute;
        top: 50%;
        left: 50%;
        margin-right: -50%;
        transform: translate(-50%, -50%)
      }
    }
  }
}

/* Extra Small Devices, Phones */
@media only screen and (min-device-width: 480px) and (min-width : 480px) {

}

/* Small Devices, Tablets */
@media only screen and (min-width : 768px) {

}

/* Medium Devices, Desktops */
@media only screen and (min-width : 992px) {
  article.region-tile {
    max-width: 250px;
    font-size: 1.5em;

    div {
      min-height: 200px;
    }
  }
}

/* Large Devices, Wide Screens */
@media only screen and (min-width : 1200px) {

}

